# rfanctl

./: .gitignore  Cargo.toml
src/: dbg.rs  fan.rs  main.rs
